--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>CRUD</title>
+    <link media="print" rel="stylesheet" href="./assets/css/print.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
@@ -21,37 +22,38 @@
         <div class="col">
             <input type="button" class="btn btn-info" id="create-table" value="Создать таблицу">
             <input type="button" class="btn btn-danger" id="remove-table" value="Удалить таблицу">
-            <input type="button" class="btn btn-dark" id="print-table" value="Рачпечатать таблицу">
         </div>
     </div>
     <div class="row">
-        <form action="#" id="create-row">
+        <form action="#" id="form">
+            <input type="hidden" name="id" id="id">
             <div class="mb-3">
                 <label for="date" class="form-label">Дата</label>
                 <input type="date" class="form-control" name="date" id="date"required>
             </div>
             <div class="mb-3">
-                <label for="date" class="form-label">Наименование поставщика</label>
-                <input type="text" class="form-control" name="supplier" id="wearh" required>
+                <label for="supplier" class="form-label">Наименование поставщика</label>
+                <input type="text" class="form-control" name="supplier" id="supplier" required>
             </div>
             <div class="mb-3">
-                <label for="date" class="form-label">Склад приёмки</label>
-                <input type="text" class="form-control" name="warehouse" id="sklad" required>
+                <label for="warehouse" class="form-label">Склад приёмки</label>
+                <input type="text" class="form-control" name="warehouse" id="warehouse" required>
             </div>
             <div class="mb-3">
-                <label for="date" class="form-label">Наименование товара</label>
-                <input type="text" class="form-control" name="name_product" id="product" required>
+                <label for="name_product" class="form-label">Наименование товара</label>
+                <input type="text" class="form-control" name="name_product" id="name_product" required>
             </div>
             <div class="mb-3">
-                <label for="date" class="form-label">Колличество</label>
+                <label for="count" class="form-label">Колличество</label>
                 <input type="number" class="form-control" name="count" id="count" required>
             </div>
             <div class="mb-3">
-                <label for="date" class="form-label">Сумма</label>
+                <label for="total" class="form-label">Сумма</label>
                 <input type="number" class="form-control" name="total" id="total" required>
             </div>
             <div class="mb-3">
-                <input type="submit" class="btn btn-success" value="Добавить товар">
+                <input type="submit" class="btn btn-success" id="create-row" value="Добавить товар">
+                <input type="button" class="btn btn-success d-none" id="update-row" value="Обновить запись">
             </div>
 
         </form>
@@ -62,15 +64,28 @@
     <div class="col">
         <table id="tabletable" border="1" cellspacing="0" style="width:100%" class="table table-dark table-striped table-hover">
             <thead>
-            <th>Id</th>
-            <th>Дата</th>
-            <th>Наименование поставщика</th>
-            <th>Склад приймки</th>
-            <th>Наименование товара</th>
-            <th>Колличество</th>
-            <th>Сумма</th>
-            <th></th>
-            <th></th>
+            <tr>
+                <th>Id</th>
+                <th>Дата</th>
+                <th>Наименование поставщика</th>
+                <th>Склад приймки</th>
+                <th>Наименование товара</th>
+                <th>Колличество</th>
+                <th>Сумма</th>
+                <th></th>
+                <th></th>
+            </tr>
+            <tr>
+                <th></th>
+                <th><input class="form-control" type="date" name="filter-date" id="filter-date"></th>
+                <th><input class="form-control" type="text" name="filter-supplier" id="filter-supplier"></th>
+                <th><input class="form-control" type="text" name="filter-warehouse" id="filter-warehouse"></th>
+                <th><input class="form-control" type="text" name="filter-name_product" id="filter-name_product"></th>
+                <th><input class="form-control" type="text" name="filter-count" id="filter-count"></th>
+                <th><input class="form-control" type="text" name="filter-total" id="filter-total"></th>
+                <th></th>
+                <th></th>
+              </tr>
             </thead>
             <tbody id="data-row">
 
@@ -87,6 +102,7 @@
         integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
         crossorigin="anonymous"></script>
 
+<script src="assets/js/function.js"></script>
 <script src="assets/js/DB.js"></script>
 <script src="assets/js/Table.js"></script>
 <script src="assets/js/app.js"></script>
